--- a/tool/templates/ticker.html
+++ b/tool/templates/ticker.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Stock Ticker</title>
+    <link rel="style" href="clean.css">
 </head>
 <body>
     <canvas id="myChart"></canvas>
@@ -44,7 +45,7 @@
 	  }
 	  chart.update();
       }
-      setInterval(updateChart, 30000); // refresh every 30 seconds
+      setInterval(updateChart, 5000); // refresh every 5 seconds
     </script>
 
 </body>
